--- a/requirements.txt
+++ b/requirements.txt
@@ -76,30 +76,19 @@ pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
 pillow==11.0.0
-platformdirs==4.3.6
-prometheus_client==0.21.0
-prompt_toolkit==3.0.48
-protobuf==5.28.3
-psutil==6.1.0
-pure_eval==0.2.3
-pyarrow==18.0.0
-pycparser==2.22
-pydeck==0.9.1
-Pygments==2.18.0
-PyMySQL==1.1.1
-pyparsing==3.2.0
-python-bidi==0.6.3
-python-json-logger==2.0.7
-pytz==2024.2
-pywin32==308
-pywinpty==2.0.14
-PyYAML==6.0.2
-pyzmq==26.2.0
-referencing==0.35.1
-requests==2.32.3
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.9.3
+protobuf==3.20.3
+pyarrow==10.0.1
+pydeck==0.8.0
+Pygments==2.13.0
+Pympler==1.0.1
+pyparsing==3.0.9
+pyrsistent==0.19.2
+python-dateutil==2.8.2
+pytz==2022.6
+pytz-deprecation-shim==0.1.0.post0
+requests==2.28.1
+rich==12.6.0
+
 rpds-py==0.20.0
 scikit-learn==1.5.2
 scipy==1.14.1
