--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ fonttools==4.38.0
 gitdb==4.0.10
 GitPython==3.1.29
 idna==3.4
+numpy==1.23.5
+
 importlib-metadata==5.1.0
 Jinja2==3.1.2
 joblib==1.2.0
